--- a/app/latex.css
+++ b/app/latex.css
@@ -5,12 +5,78 @@
  * Licensed under MIT (https://github.com/vincentdoerig/latex-css/blob/master/LICENSE)
 */
 
+/* OpenAI Sans Fonts - Active */
+@font-face {
+  font-family: 'OpenAI Sans';
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url('/fonts/openai-sans/OpenAISans-Light.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'OpenAI Sans';
+  font-style: italic;
+  font-weight: 300;
+  font-display: swap;
+  src: url('/fonts/openai-sans/OpenAISans-LightItalic.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'OpenAI Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url('/fonts/openai-sans/OpenAISans-Regular.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'OpenAI Sans';
+  font-style: normal;
+  font-weight: 500;
+  font-display: swap;
+  src: url('/fonts/openai-sans/OpenAISans-Medium.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'OpenAI Sans';
+  font-style: italic;
+  font-weight: 500;
+  font-display: swap;
+  src: url('/fonts/openai-sans/OpenAISans-MediumItalic.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'OpenAI Sans';
+  font-style: normal;
+  font-weight: 600;
+  font-display: swap;
+  src: url('/fonts/openai-sans/OpenAISans-Semibold.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'OpenAI Sans';
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url('/fonts/openai-sans/OpenAISans-Bold.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'OpenAI Sans';
+  font-style: italic;
+  font-weight: 700;
+  font-display: swap;
+  src: url('/fonts/openai-sans/OpenAISans-BoldItalic.woff2') format('woff2');
+}
+
+/* Original Latin Modern Fonts - Commented for easy switching
 @font-face {
   font-family: 'Latin Modern';
   font-style: normal;
   font-weight: normal;
   font-display: swap;
-  src: url('/fonts/LM-regular.woff2') format('woff2'),
+  src: url('/fonts/lm-bold/LM-regular.woff2') format('woff2'),
 }
 
 @font-face {
@@ -18,7 +84,7 @@
   font-style: italic;
   font-weight: normal;
   font-display: swap;
-  src: url('/fonts/LM-italic.woff2') format('woff2'),
+  src: url('/fonts/lm-bold/LM-italic.woff2') format('woff2'),
 }
 
 @font-face {
@@ -26,7 +92,7 @@
   font-style: normal;
   font-weight: bold;
   font-display: swap;
-  src: url('/fonts/LM-bold.woff2') format('woff2'),
+  src: url('/fonts/lm-bold/LM-bold.woff2') format('woff2'),
 }
 
 @font-face {
@@ -34,15 +100,17 @@
   font-style: italic;
   font-weight: bold;
   font-display: swap;
-  src: url('/fonts/LM-bold-italic.woff2') format('woff2'),
+  src: url('/fonts/lm-bold/LM-bold-italic.woff2') format('woff2'),
 }
+*/
 
+/* Original Libertinus Fonts - Commented for easy switching
 @font-face {
   font-family: 'Libertinus';
   font-style: normal;
   font-weight: normal;
   font-display: swap;
-  src: url('/fonts/Libertinus-regular.woff2') format('woff2');
+  src: url('/fonts/libertinus/Libertinus-regular.woff2') format('woff2');
 }
 
 @font-face {
@@ -50,7 +118,7 @@
   font-style: italic;
   font-weight: normal;
   font-display: swap;
-  src: url('/fonts/Libertinus-italic.woff2') format('woff2');
+  src: url('/fonts/libertinus/Libertinus-italic.woff2') format('woff2');
 }
 
 @font-face {
@@ -58,7 +126,7 @@
   font-style: normal;
   font-weight: bold;
   font-display: swap;
-  src: url('/fonts/Libertinus-bold.woff2') format('woff2');
+  src: url('/fonts/libertinus/Libertinus-bold.woff2') format('woff2');
 }
 
 @font-face {
@@ -66,7 +134,7 @@
   font-style: italic;
   font-weight: bold;
   font-display: swap;
-  src: url('/fonts/Libertinus-bold-italic.woff2') format('woff2');
+  src: url('/fonts/libertinus/Libertinus-bold-italic.woff2') format('woff2');
 }
 
 @font-face {
@@ -74,7 +142,7 @@
   font-style: normal;
   font-weight: 600;
   font-display: swap;
-  src: url('/fonts/Libertinus-semibold.woff2') format('woff2');
+  src: url('/fonts/libertinus/Libertinus-semibold.woff2') format('woff2');
 }
 
 @font-face {
@@ -82,8 +150,9 @@
   font-style: italic;
   font-weight: 600;
   font-display: swap;
-  src: url('/fonts/Libertinus-semibold-italic.woff2') format('woff2');
+  src: url('/fonts/libertinus/Libertinus-semibold-italic.woff2') format('woff2');
 }
+*/
 
 /* Box sizing rules */
 *,
@@ -170,7 +239,8 @@ html {
 }
 
 body.libertinus {
-  font-family: 'Libertinus', Georgia, Cambria, 'Times New Roman', Times, serif;
+  font-family: 'OpenAI Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+  /* Original: font-family: 'Libertinus', Georgia, Cambria, 'Times New Roman', Times, serif; */
 }
 
 .text-justify {
@@ -178,7 +248,8 @@ body.libertinus {
 }
 
 body {
-  font-family: 'Latin Modern', Georgia, Cambria, 'Times New Roman', Times, serif;
+  font-family: 'OpenAI Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+  /* Original: font-family: 'Latin Modern', Georgia, Cambria, 'Times New Roman', Times, serif; */
   line-height: 1.8;
 
   max-width: 80ch;
