--- a/app/latex.css
+++ b/app/latex.css
@@ -5,154 +5,8 @@
  * Licensed under MIT (https://github.com/vincentdoerig/latex-css/blob/master/LICENSE)
 */
 
-/* OpenAI Sans Fonts - Active */
-@font-face {
-  font-family: 'OpenAI Sans';
-  font-style: normal;
-  font-weight: 300;
-  font-display: swap;
-  src: url('/fonts/openai-sans/OpenAISans-Light.woff2') format('woff2');
-}
-
-@font-face {
-  font-family: 'OpenAI Sans';
-  font-style: italic;
-  font-weight: 300;
-  font-display: swap;
-  src: url('/fonts/openai-sans/OpenAISans-LightItalic.woff2') format('woff2');
-}
-
-@font-face {
-  font-family: 'OpenAI Sans';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: url('/fonts/openai-sans/OpenAISans-Regular.woff2') format('woff2');
-}
-
-@font-face {
-  font-family: 'OpenAI Sans';
-  font-style: normal;
-  font-weight: 500;
-  font-display: swap;
-  src: url('/fonts/openai-sans/OpenAISans-Medium.woff2') format('woff2');
-}
-
-@font-face {
-  font-family: 'OpenAI Sans';
-  font-style: italic;
-  font-weight: 500;
-  font-display: swap;
-  src: url('/fonts/openai-sans/OpenAISans-MediumItalic.woff2') format('woff2');
-}
-
-@font-face {
-  font-family: 'OpenAI Sans';
-  font-style: normal;
-  font-weight: 600;
-  font-display: swap;
-  src: url('/fonts/openai-sans/OpenAISans-Semibold.woff2') format('woff2');
-}
-
-@font-face {
-  font-family: 'OpenAI Sans';
-  font-style: normal;
-  font-weight: 700;
-  font-display: swap;
-  src: url('/fonts/openai-sans/OpenAISans-Bold.woff2') format('woff2');
-}
-
-@font-face {
-  font-family: 'OpenAI Sans';
-  font-style: italic;
-  font-weight: 700;
-  font-display: swap;
-  src: url('/fonts/openai-sans/OpenAISans-BoldItalic.woff2') format('woff2');
-}
-
-/* Original Latin Modern Fonts - Commented for easy switching
-@font-face {
-  font-family: 'Latin Modern';
-  font-style: normal;
-  font-weight: normal;
-  font-display: swap;
-  src: url('/fonts/lm-bold/LM-regular.woff2') format('woff2'),
-}
-
-@font-face {
-  font-family: 'Latin Modern';
-  font-style: italic;
-  font-weight: normal;
-  font-display: swap;
-  src: url('/fonts/lm-bold/LM-italic.woff2') format('woff2'),
-}
-
-@font-face {
-  font-family: 'Latin Modern';
-  font-style: normal;
-  font-weight: bold;
-  font-display: swap;
-  src: url('/fonts/lm-bold/LM-bold.woff2') format('woff2'),
-}
-
-@font-face {
-  font-family: 'Latin Modern';
-  font-style: italic;
-  font-weight: bold;
-  font-display: swap;
-  src: url('/fonts/lm-bold/LM-bold-italic.woff2') format('woff2'),
-}
-*/
-
-/* Original Libertinus Fonts - Commented for easy switching
-@font-face {
-  font-family: 'Libertinus';
-  font-style: normal;
-  font-weight: normal;
-  font-display: swap;
-  src: url('/fonts/libertinus/Libertinus-regular.woff2') format('woff2');
-}
-
-@font-face {
-  font-family: 'Libertinus';
-  font-style: italic;
-  font-weight: normal;
-  font-display: swap;
-  src: url('/fonts/libertinus/Libertinus-italic.woff2') format('woff2');
-}
-
-@font-face {
-  font-family: 'Libertinus';
-  font-style: normal;
-  font-weight: bold;
-  font-display: swap;
-  src: url('/fonts/libertinus/Libertinus-bold.woff2') format('woff2');
-}
-
-@font-face {
-  font-family: 'Libertinus';
-  font-style: italic;
-  font-weight: bold;
-  font-display: swap;
-  src: url('/fonts/libertinus/Libertinus-bold-italic.woff2') format('woff2');
-}
-
-@font-face {
-  font-family: 'Libertinus';
-  font-style: normal;
-  font-weight: 600;
-  font-display: swap;
-  src: url('/fonts/libertinus/Libertinus-semibold.woff2') format('woff2');
-}
-
-@font-face {
-  font-family: 'Libertinus';
-  font-style: italic;
-  font-weight: 600;
-  font-display: swap;
-  src: url('/fonts/libertinus/Libertinus-semibold-italic.woff2') format('woff2');
-}
-*/
+/* Import font definitions */
+@import url('./fonts.css');
 
 /* Box sizing rules */
 *,
@@ -239,7 +93,7 @@ html {
 }
 
 body.libertinus {
-  font-family: 'OpenAI Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+  font-family: 'Optimistic Text', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
   /* Original: font-family: 'Libertinus', Georgia, Cambria, 'Times New Roman', Times, serif; */
 }
 
@@ -248,7 +102,7 @@ body.libertinus {
 }
 
 body {
-  font-family: 'OpenAI Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+  font-family: 'Optimistic Text', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
   /* Original: font-family: 'Latin Modern', Georgia, Cambria, 'Times New Roman', Times, serif; */
   line-height: 1.8;
 
@@ -350,7 +204,7 @@ article > * + * {
 code,
 pre,
 kbd {
-  font-family: Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New',
+  font-family: 'Source Code Pro', Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New',
     monospace;
   font-size: 85%;
   hyphens: none;
@@ -784,6 +638,10 @@ input.sidenote-toggle {
 }
 
 /* Heading typography */
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Optimistic Display', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+}
+
 h1 {
   font-size: 2.5rem;
   line-height: 3.25rem;
