--- a/app/globals.css
+++ b/app/globals.css
@@ -167,8 +167,8 @@
   h4,
   h5,
   h6 {
-    font-family: var(--font-stix-two-text), -apple-system,
-      BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+    font-family: var(--font-stix-two-text), -apple-system, BlinkMacSystemFont,
+      "Segoe UI", Roboto, sans-serif;
   }
 
   a:not([class]) {
